<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<artifactId>backend</artifactId>
	<build>
		<plugins>
			<plugin>
				<artifactId>asciidoctor-maven-plugin</artifactId>
				<dependencies>
					<dependency>
						<artifactId>spring-restdocs-asciidoctor</artifactId>
						<groupId>org.springframework.restdocs</groupId>
						<version>${spring-restdocs.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<configuration>
							<attributes>
								<snippets>${project.build.directory}/snippets</snippets>
							</attributes>
							<backend>html</backend>
							<doctype>book</doctype>
							<sourceDocumentName>index.adoc</sourceDocumentName>
						</configuration>
						<goals>
							<goal>process-asciidoc</goal>
						</goals>
						<id>generate-docs</id>
						<phase>prepare-package</phase>
					</execution>
				</executions>
				<groupId>org.asciidoctor</groupId>
				<version>2.2.4</version>
			</plugin>
			<plugin>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<artifactId>lombok</artifactId>
							<groupId>org.projectlombok</groupId>
						</exclude>
					</excludes>
					<mainClass>de.footystats.tools.BackendApplication</mainClass>
				</configuration>
				<groupId>org.springframework.boot</groupId>
			</plugin>
		</plugins>
		<testResources>
			<testResource>
				<directory>${project.basedir}/src/test/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>

	</build>
	<dependencies>
		<dependency>
			<artifactId>spring-boot-starter-batch</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>
		<dependency>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>
		<dependency>
			<artifactId>spring-boot-starter-web</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>
		<dependency>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>
		<dependency>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>
		<dependency>
			<artifactId>spring-boot-starter-cache</artifactId>
			<groupId>org.springframework.boot</groupId>
		</dependency>
		<dependency>
			<artifactId>hibernate-validator</artifactId>
			<groupId>org.hibernate.validator</groupId>
			<version>8.0.1.Final</version>
		</dependency>
		<dependency>
			<artifactId>h2</artifactId>
			<groupId>com.h2database</groupId>
			<scope>runtime</scope>
			<version>2.2.224</version>
		</dependency>
		<dependency>
			<artifactId>commons-io</artifactId>
			<groupId>commons-io</groupId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<artifactId>opencsv</artifactId>
			<groupId>com.opencsv</groupId>
			<version>5.8</version>
		</dependency>
		<dependency>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<version>2.16.0</version>
		</dependency>
		<dependency>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<groupId>org.springdoc</groupId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<artifactId>spring-boot-devtools</artifactId>
			<groupId>org.springframework.boot</groupId>
			<optional>true</optional>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<groupId>org.springframework.boot</groupId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<artifactId>lombok</artifactId>
			<groupId>org.projectlombok</groupId>
			<optional>true</optional>
			<version>1.18.30</version>
		</dependency>
		<dependency>
			<artifactId>modelmapper</artifactId>
			<groupId>org.modelmapper</groupId>
			<version>3.2.0</version>
		</dependency>
		<dependency>
			<artifactId>spring-boot-starter-test</artifactId>
			<groupId>org.springframework.boot</groupId>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework.batch/spring-batch-test -->
		<dependency>
			<artifactId>spring-batch-test</artifactId>
			<groupId>org.springframework.batch</groupId>
			<scope>test</scope>
			<version>5.0.2</version>
		</dependency>
		<dependency>
			<artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
			<groupId>de.flapdoodle.embed</groupId>
			<scope>test</scope>
			<version>4.10.1</version>
		</dependency>
		<dependency>
			<artifactId>spring-restdocs-mockmvc</artifactId>
			<groupId>org.springframework.restdocs</groupId>
		</dependency>
	</dependencies>
	<description>footystats tools backend server</description>
	<groupId>de.ludwig.footystats.tools</groupId>
	<modelVersion>4.0.0</modelVersion>
	<name>backend</name>
	<parent>
		<artifactId>spring-boot-starter-parent</artifactId>
		<groupId>org.springframework.boot</groupId>
		<relativePath/>
		<version>3.1.5</version> <!-- lookup parent from repository -->
	</parent>
	<profiles>
		<profile>
			<build>
				<plugins>
					<plugin>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
							<excludes>
								<exclude>
									<artifactId>lombok</artifactId>
									<groupId>org.projectlombok</groupId>
								</exclude>
							</excludes>
							<jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
							<profiles>
								<profile>openapi</profile>
							</profiles>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>start</goal>
								</goals>
								<id>pre-integration-test</id>
							</execution>
							<execution>
								<goals>
									<goal>stop</goal>
								</goals>
								<id>post-integration-test</id>
							</execution>
						</executions>
						<groupId>org.springframework.boot</groupId>
					</plugin>
					<plugin>
						<artifactId>springdoc-openapi-maven-plugin</artifactId>
						<configuration>
							<outputDir>${project.basedir}/target/openapi</outputDir>
							<outputFileName>openapi.json</outputFileName>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>generate</goal>
								</goals>
								<id>integration-test</id>
							</execution>
						</executions>
						<groupId>org.springdoc</groupId>
						<version>1.4</version>
					</plugin>
					<plugin>
						<artifactId>openapi-generator-maven-plugin</artifactId>
						<executions>
							<execution>
								<configuration>
									<additionalProperties>typescriptThreePlus=true</additionalProperties>
									<generatorName>typescript-fetch</generatorName>
									<inputSpec>${project.basedir}/target/openapi/openapi.json</inputSpec>
									<output>${project.basedir}/../footystats-tools-frontend/src/footystats-frontendapi
									</output>
									<serverVariableOverrides>env=${frontend.api.generator.backendurl},port=8080</serverVariableOverrides>
								</configuration>
								<goals>
									<goal>generate</goal>
								</goals>
								<phase>install</phase>
							</execution>
						</executions>
						<!-- RELEASE_VERSION -->
						<groupId>org.openapitools</groupId>
						<!-- /RELEASE_VERSION -->
						<version>6.3.0</version>
					</plugin>
				</plugins>
			</build>
			<id>openapi</id>
		</profile>
	</profiles>

	<properties>
		<frontend.api.generator.backendurl>localhost</frontend.api.generator.backendurl>
		<java.version>21</java.version> <!-- Otherwise mvn uses an older jdk even if java_home env is set correctly. -->
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<version>1.2.0</version>
</project>
